--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-icons": "^5.2.0",
     "react-particles-js": "^3.6.0",
     "react-scripts": "5.0.1",
+    "react-scroll": "1.8.7",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
