feat: add custom domain

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "homepage": "https://pausiber.github.io/hackhaftasi",
+    "homepage": "https://hackhaftasi.com",
     "name": "hackhaftasi-react",
     "version": "0.1.0",
     "private": true,
