--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "homepage": "https://hackhaftasi.com",
-    "name": "hackhaftasi-react",
+    "name": "hackhaftasi",
     "version": "0.1.0",
     "private": true,
     "dependencies": {
